--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Check branch name
-      if: $GITHUB_REF == 'refs/heads/main'
+      if: env.GITHUB_REF == 'refs/heads/main'
       run: echo "Building on the main branch."
     - name: Do something
       run: echo "Doing something..."
